Issue #27792: force int return type for modulo operations involving bools.